vlib/v/checker/tests/go_expr.vv
fn main() {
	spawn 1
}
